<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:text="@string/app_name"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="32sp" />

            <Switch
                android:id="@+id/capital_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/capital_label" />

            <Switch
                android:id="@+id/growth_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/growth_label" />

            <Switch
                android:id="@+id/income_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/income_label" />

            <Switch
                android:id="@+id/deferral_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/deferral_label" />

            <Switch
                android:id="@+id/speculation_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/speculation_label" />

            <EditText
                android:id="@+id/horizon_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="-5dp"
                android:hint="@string/horizon_label"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/risktol_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="-5dp"
                android:hint="@string/risktol_label"
                android:inputType="number"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/liq_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="-5dp"
                android:hint="@string/liq_label"
                android:inputType="number"
                android:textSize="14sp" />


            <Switch
                android:id="@+id/dep_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/dep_label" />


            <EditText
                android:id="@+id/tax_bracket_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-5dp"
                android:hint="@string/tax_bracket_label"
                android:inputType="number"
                android:textSize="14sp" />

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="@style/WhiteTextInputLayout">

                <EditText
                    android:id="@+id/signup_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-5dp"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="@style/WhiteTextInputLayout">

                <EditText
                    android:id="@+id/signup_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-5dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:hintTextAppearance="@style/WhiteTextInputLayout">

                <EditText
                    android:id="@+id/signup_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="-5dp"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@android:color/holo_blue_dark"
                android:padding="12dp"
                android:text="Create Account"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </FrameLayout>
</ScrollView>